	the content properly.

2012-12-07  Cedric Bail

	* Safer call to mkstemp in elm_cnp.
	* Simplify test in elm_entry_text_set.

2012-12-07  WooHyun Jung

	* Fix focus problem in multibuttonentry. Entry can get focus only when multibuttonentry is focused.

2012-12-08  ChunEon Park (Hermet)

	* Fix the naviframe title_set problem that caused the title visible status reset.

2012-12-10  Cedric Bail

	* Make sure private data is not NULL in elm_interface_scrollable.
	* Correctly handle failure case in _x11_notify_handler_image.
	* Fix missuse of EINA_INLIST_FOREACH in elm_transit.c.

2012-12-12  ChunEon Park (Hermet)

	* Update mapbuf forcely whenever it's states are changed.

2012-12-12  WooHyun Jung

	* Now, dummy object is always smart member of naviframe.

2012-12-14  Jiyoun Park

	* Fix naviframe's resize object problem when item was deleted.

2012-12-17  Chueon Park (Hermet)

	* Fix the popup that returned invalid action buttons.

2012-12-17  Chueon Park (Hermet)

	* Makes naviframe safety even if someone deletes the naviframe in transition finished cb.

2012-12-18  Chueon Park (Hermet)

	* Elm_transit image aniamtion effects supports elm_image object type.

2012-12-18  Chueon Park (Hermet)

	* Don't Elm_transit image animation use image preloading to avoid image flickering.

2012-12-18  Chueon Park (Hermet)

	* Let image update right now if the image preloading is disabled.

2012-12-18  Gustavo Sverzut Barbieri (k-s)

	* elm_plug now emits "image,resized" on server-side changes.
	* elm_plug typo fixed "image.deleted" to "image,deleted" ('.' -> ',')

2012-12-20  Henrique Dante de Almeida (hdante)

	* Add elm_dbus_menu to support D-Bus external menus.
	* Add main menu to elm_win, which can be exported via D-Bus
	* Add configuration: ELM_EXTERNAL_MENU, to switch between internal and external menus

2012-12-20  Murilo Pinoti Belluzzo (mbelluzzo)

	* Add elm_systray to set a Status Notifier Item in the System Tray (D-Bus).